cabal-version:       3.0
name:                blueripple-research
version:             0.3.0.0
synopsis:            BlueRipple current research
description:         Current research projects live here and will trickle into their own repos when appropriate.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam@blueripplepolitics.org
-- copyright:
category:            Numeric
build-type:          Simple
extra-source-files:
data-dir: data
--data-files: images/WWCV_Tweet.png

source-repository head
  type: git
  location: https://github.com/blueripple/blueripple-research.git

common common-options
  build-depends: base >= 4.11.1.0
               , array
               , blaze-html
               , blueripple-data-sets >= 0.2.0.0
               , binary
               , cereal >= 0.5.7 && < 0.6
               , cereal-text >= 0.1.0 && < 0.2
               , clock >= 0.8 && < 0.9
               , containers >= 0.5 && < 0.7
               , data-science-utils
               , discrimination >= 0.3 && < 0.6
               , exceptions >= 0.10.4 && < 0.11
               , flat >= 0.4.4 && < 0.7
               , Frames >= 0.6.1 && < 0.8
               , Frames-map-reduce >= 0.4.1.0
               , Frames-hvega >= 0.3
               , Frames-utils >= 0.3.1
               , Frames-streamly >= 0.3 && < 0.4
               , Frames-serialize >= 0.1.0
               , foldl >= 1.4 && < 1.5
               , foldl-statistics >= 0.1.5 && < 0.2
               , generic-optics >= 2.0
               , grid >= 7.8 && < 7.10
               , groups
               , heidi >= 0.1.0 && < 0.2
               , here
               , hvega >= 0.7.0 && < 0.13
               , hvega-utils >= 0.3.0 && < 0.4
               , hmatrix
               , knit-haskell >= 0.8.0 && < 0.11
               , lens >= 4.16 && < 6
               , lucid
               , massiv >= 1.0.0 && < 1.1
               , microlens-platform >= 0.4.0 && < 0.5
               , map-reduce-folds >= 0.1.0.1
               , optics >= 0.3 && < 0.5
               , path >= 0.8 && < 0.10
               , pipes
               , polysemy >= 1.6 && < 1.8
               , polysemy-plugin
               , polysemy-RandomFu
               , primitive >= 0.7.0.0
               , profunctors
               , random-fu >= 0.2.7.3
--               , random-source
               , relude >=1.0.0 && < 1.2
               , semirings >= 0.5 && < 0.7
               , say >= 0.1.0.1 && < 0.2
               , som > 10.0 && < 10.2
--               , sparse-linear-algebra >= 0.3 && < 0.4
               , statistics
               , streamly >= 0.8 && < 0.9
               , streamly-bytestring
               , text >= 1.2 && < 2.1
               , time
               , tsne >= 1.2 && < 1.4
               , vector >= 0.11 && < 0.13
               , vector-builder >= 0.3.7 && < 0.4
               , vinyl >= 0.14 && < 0.15

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables
                       StrictData
                       TupleSections
                       TypeApplications

library blueripple-glm
--  import: deps
  ghc-options:
  build-depends: base
               , array
               , blaze-colonnade
               , blaze-html
               , blueripple-data-sets
               , blueripple-research
               , cereal
               , cereal-text
               , colonnade
               , containers
               , foldl
               , Frames
               , Frames-map-reduce
               , Frames-serialize
               , Frames-hvega
               , Frames-utils
               , glm-haskell
               , hashable
               , here
               , hmatrix
               , hvega
               , hvega-utils
               , knit-haskell
               , lens
               , map-reduce-folds
               , mtl
               , pandoc
               , pipes
               , polysemy
               , polysemy-plugin
               , profunctors
               , relude
               , statistics
               , text
               , time
               , vector
               , vinyl
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  exposed-modules: BlueRipple.Model.CachedModels
                 , BlueRipple.Model.Preference
                 , BlueRipple.Data.PrefModel
                 , BlueRipple.Data.PrefModel.SimpleAgeSexRace
                 , BlueRipple.Data.PrefModel.SimpleAgeSexEducation
                 , BlueRipple.Data.PrefModel.AgeSexRace
                 , BlueRipple.Model.CCES_MRP_Analysis
                 , BlueRipple.Model.MRP
                 , BlueRipple.Model.Turnout_MRP
  hs-source-dirs:   blueripple-glm/src


library
  import: common-options
  ghc-options: -O2 -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16 -fprint-potential-instances

  exposed-modules: BlueRipple.Configuration
                 , BlueRipple.Data.Keyed
                 , BlueRipple.Data.KeyedTables
                 , BlueRipple.Data.CountFolds
                 , BlueRipple.Data.DemographicTypes
                 , BlueRipple.Data.ElectionTypes
                 , BlueRipple.Data.ModelingTypes
                 , BlueRipple.Data.CensusTables
                 , BlueRipple.Data.CensusLoaders
                 , BlueRipple.Data.UsefulDataJoins
                 , BlueRipple.Data.HouseElectionTotals
                 , BlueRipple.Data.LoadersCore
                 , BlueRipple.Data.Loaders
                 , BlueRipple.Data.Loaders.Redistricting
                 , BlueRipple.Data.Loaders.RedistrictingTables
                 , BlueRipple.Data.DistrictOverlaps
                 , BlueRipple.Data.ACS_PUMS
                 , BlueRipple.Data.ACS_PUMS_Loader.ACS_PUMS_Path
                 , BlueRipple.Data.ACS_PUMS_Loader.ACS_PUMS_Frame
                 , BlueRipple.Data.CPSVoterPUMS
                 , BlueRipple.Data.CPSVoterPUMS.CPSVoterPUMS_Path
                 , BlueRipple.Data.CPSVoterPUMS.CPSVoterPUMS_Frame
                 , BlueRipple.Data.CCESPath
                 , BlueRipple.Data.CCESFrame
                 , BlueRipple.Data.CCES
                 , BlueRipple.Data.Quantiles
                 , BlueRipple.Data.Visualizations.DemoComparison
                 , BlueRipple.Model.DistrictClusters
                 , BlueRipple.Model.StanMRP
                 , BlueRipple.Model.PreferenceBayes
                 , BlueRipple.Model.TurnoutAdjustment
                 , BlueRipple.Model.PostStratify
                 , BlueRipple.Model.TSNE
                 , BlueRipple.Model.Demographic.DataPrep
                 , BlueRipple.Model.Demographic.StanModels
                 , BlueRipple.Model.Election.DataPrep
                 , BlueRipple.Model.Election.StanModel
                 , BlueRipple.Utilities.Heidi
                 , BlueRipple.Utilities.KnitUtils
                 , BlueRipple.Utilities.TableUtils
                 , BlueRipple.Utilities.FramesUtils
                 , Paths_blueripple_research
  build-depends: ad >= 3.4 && < 4.6
               , aeson >= 1.4 && < 2.1
               , blaze-colonnade
               , bytestring >= 0.10 && < 0.12
               , cassava >= 0.5 && < 0.6
               , cmdargs >= 0.10 && <0.11
               , colonnade
               , cereal-vector >= 0.2 && < 0.3
               , data-default
               , dependent-hashmap >= 0.1.0.1 && < 0.2
               , dependent-sum >= 0.7.0 && < 0.8
               , declarative
               , direct-sqlite >= 2.3.23
               , directory >= 1.3.3 && < 1.4
               , extra >= 1.6 && < 1.8
               , gamma
               , hs-cmdstan
               , hashable
               , hashtables >= 1.2.3.4 && < 1.4
               , haskell-stan >= 0.1.0.0
               , hmatrix
               , math-functions
               , mtl
               , hmatrix-nlopt
               , mwc-random >= 0.15.0.1 && < 0.16
               , nonlinear-optimization >= 0.3.11 && < 0.4
               , nonlinear-optimization-ad >= 0.2 && < 0.3
               , path-io >= 1.6
               , pandoc
               , parallel
               , random >= 1.1 && < 1.3
               , template-haskell
               , time
               , tuple
               , unordered-containers >= 0.2.15 && < 0.3
               , vector-th-unbox >= 0.2.1.7
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  hs-source-dirs:      src



--executable dataLoader
--  import: deps
--  ghc-options: -O0
--  hs-source-dirs: dataLoader
--  main-is:        dataLoader.hs
--  build-depends: base >= 4.11
--               , blueripple-research
--               , beam-core >= 0.8.0.0
--               , beam-sqlite >= 0.4.0.0
--               , OpenFEC-beam
--               , sqlite-simple
-- default-language: Haskell2010

executable preference-model
  import: common-options
  ghc-options: -Wall -O0 -threaded -rtsopts
  hs-source-dirs: reports
  main-is:       PreferenceModel/preference_model.hs
  other-modules: PreferenceModel.Common
               , PreferenceModel.Methods
               , PreferenceModel.PM2018
               , PreferenceModel.ExitPolls
               , PreferenceModel.AcrossTime
               , Explainer.WWCV
               , Paths_blueripple_research
--  autogen-modules: Paths_preference_model
  build-depends: base >= 4.11
               , blueripple-glm
               , blueripple-research
               , blaze-colonnade
               , cmdargs
               , colonnade
               , directory
               , lens
               , mtl
               , pandoc
               , random
               , time

executable mrp-model
  import: common-options
--  ghc-options: -Wall -O0
  ghc-options: -Wall  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: reports
  main-is:        MRP/MRP.hs
  other-modules: MRP.Common
                , PreferenceModel.Common
                , MRP.WWC
                , MRP.Pools
                , MRP.DeltaVPV
                , MRP.Kentucky
                , MRP.Wisconsin
                , MRP.TurnoutGaps
                , MRP.ElectoralWeights
                , MRP.Language
                , MRP.BidenVsWWC
                , MRP.DistrictClusters
                , MRP.ElectoralWeights
                , Visualizations.StatePrefs
  build-depends: base >= 4.11
               , blaze-colonnade
               , cmdargs
               , cereal >= 0.5.7 && < 0.6
               , cereal-text >= 0.1.0 && < 0.2
               , colonnade
               , discrimination
               , finite-typelits >= 0.1.4.2
               , grid >= 7.8 && < 7.10
               , hashable
               , lens >= 4.16 && < 6
               , log-domain >= 0.13.2 && < 0.14
               , mtl >= 2.1 && < 2.3.0
               , pandoc
               , polysemy-RandomFu
               , som > 10.0 && < 10.2
               , sparse-linear-algebra
               , blueripple-research
               , blueripple-glm
               , glm-haskell
               , time
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)

executable stan-models
  import: common-options
  ghc-options: -O2 -Wall -threaded  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: stan
  main-is: Main.hs
  build-depends: base
               , blueripple-research
               , blueripple-data-sets
               , bytestring
               , cassava
               , polysemy-RandomFu
               , haskell-stan
               , hs-cmdstan
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)

executable mission
  import: common-options
  ghc-options: -fplugin=Polysemy.Plugin -Wall -O0
  hs-source-dirs: mission
  main-is:        mission.hs
  build-depends: base >= 4.11
               , blueripple-research
               , lens
               , map-reduce-folds
               , time


executable br-2021-A
  import: common-options
  ghc-options: -O2 -Wall -threaded  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: br-2021-A
  main-is: Main.hs
  build-depends: base
               , blueripple-research
               , blueripple-data-sets
               , generic-trie
               , haskell-stan
               , hs-cmdstan
               , pandoc
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)

executable br-2021-StateLegModel
  import: common-options
  ghc-options: -O2 -Wall -threaded  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: br-2021-StateLegModel
  main-is: Main.hs
  other-modules: DataPaths, DataFrames, ElectionResultsLoaders
  build-depends: base
               , aeson
               , lens-aeson
               , blueripple-research
               , blueripple-data-sets
               , cassava
               , colonnade
               , blaze-colonnade
               , haskell-stan
               , hs-cmdstan
               , megaparsec
               , pandoc
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)

executable br-2021-NewMaps
  import: common-options
  ghc-options: -O2 -Wall -threaded  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: br-2021-NewMaps
  main-is: Main.hs
  other-modules: CDistrictPost, DemoCompChart
  build-depends: base
               , blueripple-research
               , blueripple-data-sets
               , cmdargs
               , colonnade
               , blaze-colonnade
               , haskell-stan
               , hs-cmdstan
               , pandoc
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)


executable br-2022-Demographics
  import: common-options
  ghc-options: -O2 -Wall -threaded  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: br-2022-Demographics
  main-is: Main.hs
  other-modules:
  build-depends: base
               , blueripple-research
               , blueripple-data-sets
               , cmdargs
               , colonnade
               , blaze-colonnade
               , haskell-stan
               , hs-cmdstan
               , pandoc
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)


executable ga-work
  import: common-options
  ghc-options: -O2 -Wall -threaded  -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
  hs-source-dirs: georgia
  main-is: Main.hs
  other-modules: GA_DataPaths, GA_DataFrames, Data, Models, Parsers
  build-depends: base
               , aeson
               , blueripple-research
               , blueripple-data-sets
               , bytestring
               , cassava
               , directory
               , megaparsec
               , polysemy-RandomFu
               , hs-cmdstan
               , say

executable FEC-data
  import: common-options
  ghc-options: -Wall
  hs-source-dirs: FEC-data
  main-is: Main.hs
  other-modules: FromDB
  build-depends: base
               , beam-core >= 0.9.0.0
               , beam-migrate >= 0.5.1.1
               , beam-sqlite
               , blueripple-research
               , data-default
               , OpenFEC-beam
               , sqlite-simple
               , time
               , tuple

executable house-data
  import: common-options
  ghc-options: -Wall -threaded
  hs-source-dirs: house-data, reports
  main-is: Main.hs
  build-depends: base
               , blueripple-research
               , blueripple-data-sets
               , polysemy-RandomFu

executable testbed
  import: common-options
  ghc-options: -Wall -O0
--  ghc-options: -Wall -prof -fprof-auto -eventlog -rtsopts -fexternal-interpreter -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
--  ghc-options: -Wall -eventlog -rtsopts
  hs-source-dirs: testbed
  main-is:        Main.hs
  build-depends: base >= 4.11
               , binary
               , cereal >= 0.5.7 && < 0.6
               , cereal-text >= 0.1.0 && < 0.2
               , blueripple-data-sets
               , blueripple-research
               , bytestring
               , bytestring-strict-builder
               , deepseq
               , streamly-bytestring
               , time
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
